fixed alignment issue

--- a/meme.css
+++ b/meme.css
@@ -5,7 +5,7 @@
 }
 
 .filtertext{
-    text-align-last: center;
+    text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.2rem;
     height: 80px;
